[project]
name = "cogniteration-language-server"
version = "0.1.0"
description = "MCP server for LSP-based code validation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pylspclient",
    "pydantic>=2.0",
    "mcp>=1.1.2"
]

[project.urls]
Repository = "https://github.com/AdjectiveAllison/cogniteration"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
language-server = "server:main"